--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   springapp:
-    image: buntydocker96/springboot:buildnumber
+    image: buntydocker96/springboot
     ports:
     - 9090:8080
     environment:
